feat: edge case: duplicate insert
